fix div à propos de moi en version mobile

--- a/src/styles/components/_fonts.scss
+++ b/src/styles/components/_fonts.scss
@@ -9,6 +9,7 @@
     font-family: "Limelight", sans-serif;
     font-weight: 400;
     font-style: normal;
+    text-transform: uppercase;
 }
 
 .nav__lien, .about__lien, .lirePlus {
