--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -10,8 +10,9 @@
     position: absolute;
     top: 11px;
     right: 11px;
-    z-index: 10;
+    z-index: 100;
 }
+
 .burgermenu__svg {
     fill: #2b2b2b;
     width: 36px;
@@ -27,6 +28,7 @@
     top: 0px;
     right: 0px; /* Déplace le menu hors de l'écran à droite */
     transform: translateX(100%);
+    z-index: 99;
 
 
     display: grid;
